manifests/kubenuts/kubenuts-internal-gateway/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
   namespace: "kubenuts"
   name: "kubenuts-internal"
spec:
  gatewayClassName: alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: "kubenuts-internal"
  listeners:
  - name: http-redirect
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app.kubernetes.io/managed-by: kubenuts
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app.kubernetes.io/managed-by: kubenuts
